--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -46,8 +46,7 @@ body {
 
 .login-box {
   padding: 44px 30px 44px;
-  border-top-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+  border-radius: 15px;
   background: #efefef;
   text-align: center;
   border-style: ridge;
@@ -57,9 +56,9 @@ body {
 @media (width >=500px) {
   .login-box {
     margin: auto;
-    width: 400px;
+    width: 350px;
     position: relative;
-    margin-top: 80px;
+    margin-top: 40px;
     box-shadow: 5px 10px rgb(189, 190, 186);
   }
 }
