--- a/src/styles/UserProfile.css
+++ b/src/styles/UserProfile.css
@@ -1,3 +1,22 @@
-* {
+form {
     text-align: center;
+    margin-top: 30px;
+}
+
+.bg_image_2 {
+    background-image: url("https://i.pinimg.com/originals/73/1c/87/731c87e4181c10ca8c60a556c3d2df34.jpg");
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
+
+
+  body {
+    place-items: center;
+  }
+
+  @media (width <=500px) {
+  body {
+    padding: 0;
+  }
 }
