--- a/src/styles/UserProfile.css
+++ b/src/styles/UserProfile.css
@@ -1,6 +1,7 @@
 form {
     text-align: center;
     margin-top: 30px;
+    color:white;
 }
 
 .bg_image_2 {
@@ -19,4 +20,11 @@ form {
   body {
     padding: 0;
   }
+}
+
+.avatar_image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* width: 10%;  */
 }
