Logout Button and a bit of styling.

--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -70,10 +70,12 @@ body {
 
 .email {
   margin-left: 26px;
+  color: royalblue;
 }
 
 .password {
   margin-bottom: 8px;
+  color: royalblue;
 }
 
 h1,
