--- a/src/styles/AdminPage.css
+++ b/src/styles/AdminPage.css
@@ -1,21 +1,22 @@
 .admin-body {
     display: flex;
     place-content: center;
-    /* background-image: url("https://i.pinimg.com/originals/73/1c/87/731c87e4181c10ca8c60a556c3d2df34.jpg"); */
-    width: 100%;
-    /* height: 100%; */
-    /* position: fixed; */
     background-color: #fceed1;
-    column-gap: 1rem;
+    border: #2051c5;
+    border-width: thick;
+    border-style: double;
+    border-radius: 10px;
 }
 
 .table-content {
     text-align: center;
-    color:black;    
-}
+    color:black;   
+
+    }
+
+
 
 .table-headers {
-    /* display: flex; */
     justify-content: space-around;
 }
 
